--- a/style.css
+++ b/style.css
@@ -131,11 +131,9 @@ body {
 
 
 @media (width <= 660px) {
-      body {
-            margin: 22% 6% 0 6%; 
-      }
 
-      .first-article {      
+      .first-article {  
+            margin: 7rem 7%;    
             gap: 2.7rem;
       }
 
