--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body {
 
       font-family: var(--ff-base);
       font-size: var(--fs-400);
-      background: url(images/bg-pattern-top-mobile.svg) top no-repeat, url(images/bg-pattern-bottom-mobile.svg) bottom no-repeat;
 }
 
 .grid-flow {
@@ -132,6 +131,10 @@ body {
 
 @media (width <= 660px) {
 
+      body {
+            background: url(images/bg-pattern-top-mobile.svg) top left no-repeat, url(images/bg-pattern-bottom-mobile.svg) bottom right no-repeat;
+      }
+
       .first-article {  
             padding: 7rem 7%;    
             gap: 2.7rem;
@@ -161,6 +164,8 @@ body {
 @media (width > 660px) {
       body {
             place-content: center;
+            background: url(images/bg-pattern-top-desktop.svg) top left no-repeat, url(images/bg-pattern-bottom-desktop.svg) bottom right no-repeat;
+
       }
 
       .first-article {
